@@ -7,13 +7,30 @@
     <x>0</x>
     <y>0</y>
     <width>385</width>
-    <height>336</height>
+    <height>338</height>
    </rect>
   </property>
   <property name="windowTitle">
-   <string>Config</string>
+   <string>Radio Config</string>
   </property>
   <layout class="QVBoxLayout" name="verticalLayout_2">
+   <item>
+    <layout class="QHBoxLayout" name="horizontalLayout_3" stretch="0,1">
+     <item>
+      <widget class="QLabel" name="label_RigModel">
+       <property name="text">
+        <string>Model</string>
+       </property>
+       <property name="buddy">
+        <cstring>comboBox_rigModel</cstring>
+       </property>
+      </widget>
+     </item>
+     <item>
+      <widget class="QComboBox" name="comboBox_rigModel"/>
+     </item>
+    </layout>
+   </item>
    <item>
     <widget class="QTabWidget" name="tabWidget_Config">
      <property name="currentIndex">
@@ -25,19 +42,6 @@
       </attribute>
       <layout class="QFormLayout" name="formLayout">
        <item row="0" column="0">
-        <widget class="QLabel" name="label_RigModel">
-         <property name="text">
-          <string>Model</string>
-         </property>
-         <property name="buddy">
-          <cstring>comboBox_rigModel</cstring>
-         </property>
-        </widget>
-       </item>
-       <item row="0" column="1">
-        <widget class="QComboBox" name="comboBox_rigModel"/>
-       </item>
-       <item row="1" column="0">
         <widget class="QLabel" name="label_comPort">
          <property name="text">
           <string>COM Port</string>
@@ -47,10 +51,10 @@
          </property>
         </widget>
        </item>
-       <item row="1" column="1">
+       <item row="0" column="1">
         <widget class="QComboBox" name="comboBox_comPort"/>
        </item>
-       <item row="2" column="0">
+       <item row="1" column="0">
         <widget class="QLabel" name="label_serialSpeed">
          <property name="text">
           <string>Speed</string>
@@ -60,10 +64,10 @@
          </property>
         </widget>
        </item>
-       <item row="2" column="1">
+       <item row="1" column="1">
         <widget class="QComboBox" name="comboBox_serialSpeed"/>
        </item>
-       <item row="3" column="0">
+       <item row="2" column="0">
         <widget class="QLabel" name="label_civAddr">
          <property name="cursor">
           <cursorShape>ArrowCursor</cursorShape>
@@ -76,7 +80,7 @@
          </property>
         </widget>
        </item>
-       <item row="3" column="1">
+       <item row="2" column="1">
         <layout class="QHBoxLayout" name="horizontalLayout">
          <item>
           <widget class="QLineEdit" name="lineEdit_civAddr">
@@ -218,7 +222,6 @@
  </widget>
  <tabstops>
   <tabstop>tabWidget_Config</tabstop>
-  <tabstop>comboBox_rigModel</tabstop>
   <tabstop>comboBox_comPort</tabstop>
   <tabstop>comboBox_serialSpeed</tabstop>
   <tabstop>lineEdit_civAddr</tabstop>
